fixed footer causing horizontal scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -797,7 +797,7 @@ footer p {
     }
 
     .child-product-container {
-        width: 100vh;
+        width: 350px;
         /* Make products fill entire width of viewport */
         height: 300px;
         margin: 5px;
@@ -870,6 +870,11 @@ footer p {
     form {
         width: 100%;
         padding-bottom: 20px;
+    }
+
+    footer p{ /* Remove padding and margin from footer on mobile to prevent horizontal scroll */
+        padding: 0;
+        margin: 0;
     }
 
 }
